<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ConnexionTitle">Formulaire de connexion</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="errormessage">Wrong credentials</string>
    <string name="log_confirm">Connection accepted</string>
    <string name="log_not_confirm">Connection error</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="chatTitle">AYChat</string>
    <string name="send">Send</string>
    <string name="erroraddmessage">Mandatory message</string>
    <string name="preferenceUsername">username</string>
    <string name="preferencePassword">password</string>
    <string name="prefInexistante">inexistante</string>
    <string name="historique">Historique</string>
    <string name="imageDescription">Photo de profile</string>
    
    
    <string name="MainActivity">MainActivity</string>
    
    

</resources>
